Fixes alignment with truck mascot and fixes the contact section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,18 @@
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Pacifico&family=Zilla+Slab:wght@300;400;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&display=swap');
 
 
 :root {
     --white: rgb(252, 249, 239);
     --light-grey: hsl(51, 8%, 82%);
     --dark-grey: hsl(60, 1%, 21%);
-    --blue: rgb(0, 88, 143);
+    --blue: #00588f;
     --dark-blue: #0f1d4d;
-    --black: rgb(22, 22, 24); 
+    --black: rgb(22, 22, 24);
 
-    --ff-primary: 'Arvo', serif;
-    --ff-accent: 'Zilla Slab', serif;
+    --ff-primary: 'Barlow', sans-serif;
+    --ff-accent: 'Raleway', sans-serif;
 }
 
 *,
@@ -50,15 +51,22 @@ h3 {
 
 .welcome h1 {
     color: var(--dark-blue);
-    font-size: 2.5rem;
+    font-size: 3rem;
+    font-weight: 700;
 }
 
 .bg-creamy-white h2,
 .bg-grey h2 {
-    color: var(--blue);
+    color: var(--dark-blue);
     font-size: 2rem;
-    padding: 4rem 0 2rem 0;
+    padding: 3.5rem;
     text-decoration: underline .3rem rgb(22, 22, 24, 0.2);
+}
+
+.bg-creamy-white h3,
+.bg-grey h3 {
+    color: var(--blue);
+    font-size: 1.5rem;
 }
 
 img {
@@ -66,7 +74,7 @@ img {
     max-width: 100%;
 }
 
-.container {
+.section-container {
     margin-inline: auto;
 }
 
@@ -77,6 +85,7 @@ img {
 
 .container--narrow {
     max-width: 30rem;
+    background: transparent;
 }
 
 .bg-creamy-white {
@@ -105,6 +114,7 @@ img {
 .top-bar ul {
     list-style: none;
     display: flex;
+    margin-right: 3rem;
 }
 
 .top-bar li {
@@ -127,12 +137,13 @@ img {
     text-decoration: underline;
 }
 
-.fa-solid {
+.top-bar .fa-solid {
     margin-right: .5rem;
+    margin-left: 3rem;
 }
 
-.fa-brands {
-    margin-right: .5rem;
+.top-bar .fa-brands {
+    margin-right: .3rem;
 }
 
 
@@ -140,13 +151,11 @@ img {
 
 .navbar {
     background-color: var(--white);
-    padding: 0;
-    margin: 0;
 }
 
 .navbar a {
     font-family: var(--ff-accent);
-    font-weight: 400;
+    font-weight: 500;
     color: var(--black);
     font-size: 1rem;
     text-transform: uppercase;
@@ -236,7 +245,7 @@ img {
 
 .greeting {
     width: 100%;
-    margin-inline: 0 auto;
+    margin-inline: auto;
     padding: .5rem;
     color: var(--dark-blue);
     text-align: center;
@@ -248,7 +257,8 @@ img {
     color: var(--dark-blue);
     font-size: 1.3rem;
     text-align: center;
-    margin-top: -2.5rem;
+    margin-top: -4rem;
+    margin-bottom: 2rem;
     margin-inline: auto;
 }
 
@@ -258,8 +268,81 @@ img {
 }
 
 .truck-mascot {
-    background-color: var(--blue);
+    margin-top: 2em;
+    margin-left: 3rem;
 }
+
+/* Contact Section */
+.split-contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.contact {
+    color: var(--light-grey);
+    font-size: 2.5rem;
+    border-bottom: .3rem solid var(--blue);
+}
+
+.container-contact {
+    margin-inline: auto;
+}
+
+.container-contact ul {
+    list-style: none;
+}
+
+.container-contact a {
+    text-decoration: none;
+    color: var(--light-grey);
+}
+
+.container-contact a:hover {
+    text-decoration: underline;
+    color: var(--white);
+}
+
+.address h3 {
+    color: var(--light-grey);
+    font-size: 1.5rem;
+}
+
+.address ul {
+    margin-left: .1rem;
+}
+
+.address li {
+    color: var(--white);
+    font-size: 1.3rem;
+}
+.contact-info {
+    margin-left: 15rem;
+}
+
+.contact-info h3 {
+    color: var(--light-grey);
+    font-size: 1.5rem;
+}
+
+.contact-info li {
+    color: var(--white);
+    font-size: 1.3rem;
+}
+
+.contact-info a {
+    color: var(--white);
+}
+
+.contact-info a:hover {
+    color: var(--light-grey);
+}
+
+.contact-icons {
+    margin-right: 1rem;
+}
+
 
 /* Footer */
 .copyright {
@@ -279,9 +362,26 @@ img {
         margin: 0;
     }
 
+    .truck-mascot{
+        margin-top: 2rem;
+    }
+    .split-contact {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contact-info {
+        margin-left: 0;
+        margin-top: -.3rem;
+    }
+
+    .address {
+        margin-left: -4rem;
+        margin-top: 1.5rem;
+    }
 }
 
-/* Mobile/Small screens */
 
 @media all and (min-width: 40em) {
     .split {
@@ -290,5 +390,9 @@ img {
 
     .split > * {
         flex-basis: 100%;
+    }
+
+    .truck-mascot{
+        margin-top: 5rem;
     }
 }
